--- a/android/app/src/main/res/layout/activity_sign_in.xml
+++ b/android/app/src/main/res/layout/activity_sign_in.xml
@@ -11,11 +11,11 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="128dp"
+        android:gravity=""
         android:text="회원가입"
         android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,21 +28,19 @@
         android:layout_marginTop="40dp"
         android:gravity="center"
         android:orientation="horizontal"
+        android:padding="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="PW : "
-            android:textSize="18sp" />
+
 
         <EditText
             android:id="@+id/ed_user_pw"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="25sp"
             android:hint="비밀번호"
             android:inputType="textPassword" />
     </LinearLayout>
@@ -54,6 +52,7 @@
         android:layout_marginHorizontal="30dp"
         android:layout_marginVertical="40dp"
         android:layout_marginTop="40dp"
+        android:padding="3dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,73 +60,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="e-amil : "
-            android:textSize="18sp" />
+
 
         <EditText
             android:id="@+id/ed_user_email"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="25sp"
             android:hint="이메일"
             android:inputType="textEmailAddress" />
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_sign_in"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="44dp"
-        android:text="가입하기"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/btn_cancel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="16dp"
-        android:text="취소"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginVertical="40dp"
-        android:layout_marginTop="32dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="이름 : "
-            android:textSize="18sp" />
-
-        <EditText
-            android:id="@+id/ed_user_name"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:hint="이름"
-            android:inputType="text" />
-
-    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -135,52 +79,55 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
         android:layout_marginVertical="40dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="115dp"
         android:gravity="center"
         android:orientation="horizontal"
+        android:padding="3dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ID : "
-            android:textSize="18sp" />
-
         <EditText
             android:id="@+id/ed_user_id"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="아이디" />
+            android:hint="아이디"
+            android:textSize="25sp" />
 
     </LinearLayout>
 
+
     <LinearLayout
-        android:id="@+id/linearLayout5"
-        android:layout_width="match_parent"
+        android:id="@+id/layout_next_btn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginVertical="40dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginStart="309dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="16dp"
         android:gravity="center"
         android:orientation="horizontal"
+        android:padding="3dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="주소 : "
+            android:layout_width="55dp"
+            android:layout_height="50dp"
+
+            android:gravity="center_vertical"
+            android:text="Next"
+            android:textColor="#6665"
             android:textSize="18sp" />
 
-        <EditText
-            android:id="@+id/ed_user_address"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:hint="주소" />
+
+        <Button
+            android:id="@+id/btn_next"
+            android:layout_width="40dp"
+            android:layout_height="50dp"
+            android:background="?attr/selectableItemBackground"
+            android:drawableRight="@drawable/baseline_chevron_right_24"
+            android:text="" />
 
     </LinearLayout>
 
